# turbo-enigma-authentication-server

./: Cargo.toml  Dockerfile  README.md  Rocket.toml  docker-compose.yaml
.cargo/: config.toml
migrations/: .down.sql  20222010_up.sql
migrations/conf.d/: custom.cnf
nginx/: nginx.conf
src/: .ycm_extra_conf.py  main.rs
src/api/: api.rs  api_guards.rs  login.rs  mod.rs  modify.rs  register.rs  remove.rs  response.rs
src/auth/: account.rs  authentication.rs  captcha.rs  jwt.rs  mod.rs  otp.rs
src/catchers/: catchers.rs
src/connections/: connect.rs
src/tests/: lib.rs
static/: functions.js  homepage.html  index.html  login.html  register.html  style.css
