[package]
name = "turbo-enigma-authentication-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = {version = "0.5.0-rc.2", features = ["json"]}
jwt = "0.9.0"
hmac = "0.8.1"
sha2 = "0.9"
bcrypt = "0.8.2"
uuid = {version = "1.2.1", features = ["serde", "v4"]}
sqlx = { version = "0.6.2", features = ["mysql","runtime-async-std-native-tls"]}
async-std = { version = "1", features = [ "attributes" ] }
serde = "1.0"
anyhow = "1.0"
captcha-rs = "0.2.6"
image = "0.24.4"
base64 = "0.13.1"
totp-rs = {version = "^3.0", features = ["qr"]}
dotenv = "0.15.0"
